--- a/Html/Accueil.html
+++ b/Html/Accueil.html
@@ -21,40 +21,96 @@
 
             <header>
 
-            <!-- Logo/Title -->
-            <div class="logo">
-                <img src="/Users/gaelletakforyan/Desktop/Openclassrooms/Projet-3/images/logo/ohmyfood@2x.svg" alt="logo Ohmyfood">
-            </div>
+                <!-- Logo/Title -->
+                <div class="logo">
+                    <img src="/Users/gaelletakforyan/Desktop/Openclassrooms/Projet-3/images/logo/ohmyfood@2x.svg" alt="logo Ohmyfood">
+                </div>
 
-            <!-- City search -->
-            <button> 
-                <img class="map" src="/Users/gaelletakforyan/Desktop/Openclassrooms/Projet-3/images/font/map.svg" alt="map"> Paris, Belleville
-            </button>
-
-            <!-- Purpose -->
-            <div class="purpose">
-                <p> Réservez le menu qui vous convient </p>
-                <p> Découvrez des restaurants d'exception, séléctionnés par nos soins.</p>
-            </div>
-
-            <input type="button" value="Explorer nos restaurants">
-
-            <!-- Running -->
-            <nav>
-                <img class="1" src="/Users/gaelletakforyan/Desktop/Openclassrooms/Projet-3/images/font/1.svg" alt="1">
-                <button>
-                    <img class="select" src="/Users/gaelletakforyan/Desktop/Openclassrooms/Projet-3/images/font/mobile.svg" alt="select"> Choisissez un restaurant
+                <!-- City search -->
+                <button> 
+                    <img class="map" src="/Users/gaelletakforyan/Desktop/Openclassrooms/Projet-3/images/font/map.svg" alt="map"> Paris, Belleville
                 </button>
-                <img class="2" src="/Users/gaelletakforyan/Desktop/Openclassrooms/Projet-3/images/font/2.svg" alt="2">
-                <button>
-                    <img class="compose" src="/Users/gaelletakforyan/Desktop/Openclassrooms/Projet-3/images/font/list.svg" alt="compose"> Composez votre menu
-                </button>
-                <img class="3" src="/Users/gaelletakforyan/Desktop/Openclassrooms/Projet-3/images/font/3.svg" alt="3">
-                <button>
-                    <img class="store" src="/Users/gaelletakforyan/Desktop/Openclassrooms/Projet-3/images/font/store.svg" alt="store"> Dégustez au restaurant
-                </button>
-            </nav>
 
-        </header>
+                <!-- Purpose -->
+                <div class="purpose">
+                    <h2> Réservez le menu qui vous convient </h2>
+                    <p> Découvrez des restaurants d'exception, séléctionnés par nos soins.</p>
+                </div>
+
+                <input type="button" value="Explorer nos restaurants">
+
+                <!-- Running -->
+                <nav>
+                    <h2>Fonctionnement</h2>
+
+                    <img class="1" src="/Users/gaelletakforyan/Desktop/Openclassrooms/Projet-3/images/font/1.svg" alt="1">
+                    <button>
+                        <img class="select" src="/Users/gaelletakforyan/Desktop/Openclassrooms/Projet-3/images/font/mobile.svg" alt="select"> Choisissez un restaurant
+                    </button>
+                    <img class="2" src="/Users/gaelletakforyan/Desktop/Openclassrooms/Projet-3/images/font/2.svg" alt="2">
+                    <button>
+                        <img class="compose" src="/Users/gaelletakforyan/Desktop/Openclassrooms/Projet-3/images/font/list.svg" alt="compose"> Composez votre menu
+                    </button>
+                    <img class="3" src="/Users/gaelletakforyan/Desktop/Openclassrooms/Projet-3/images/font/3.svg" alt="3">
+                    <button>
+                        <img class="store" src="/Users/gaelletakforyan/Desktop/Openclassrooms/Projet-3/images/font/store.svg" alt="store"> Dégustez au restaurant
+                    </button>
+                </nav>
+
+            </header>
+
+            <section>
+
+                <!-- Restaurant selection -->
+                <h2>Restaurants</h2>
+
+                <a class="restaurant1-link" href="restaurant1-link">
+                    <div class="menilmontant">
+                        <img class="menilmontant-img" src="/Users/gaelletakforyan/Desktop/Openclassrooms/Projet-3/images/restaurants/menilmontant.jpg" alt="menilmontant">
+                        <img src="/Users/gaelletakforyan/Desktop/Openclassrooms/Projet-3/images/font/nouveau.svg" alt="new">
+                        <p class="menilmontant-title">La palette du goût </p>
+                        <p class="menilmontant-place">Ménilmontant</p>
+                        <img src="/Users/gaelletakforyan/Desktop/Openclassrooms/Projet-3/images/font/heart.svg" alt="heart">
+                    </div>
+                </a>
+
+                <a class="restaurant2-link" href="restaurant2-link">
+                    <div class="charonne">
+                        <img class="charonne-img" src="/Users/gaelletakforyan/Desktop/Openclassrooms/Projet-3/images/restaurants/charonne.jpg" alt="charonne">
+                        <img src="/Users/gaelletakforyan/Desktop/Openclassrooms/Projet-3/images/font/nouveau.svg" alt="new">
+                        <p class="charonne-title">La note enchantée</p>
+                        <p class="charonne-place">Charonne</p>
+                        <img src="/Users/gaelletakforyan/Desktop/Openclassrooms/Projet-3/images/font/heart.svg" alt="heart">
+                    </div>
+                </a>
+
+                <a class="restaurant3-link" href="restaurant3-link">
+                    <div class="cite-rouge">
+                        <img class="cite-rouge-img" src="/Users/gaelletakforyan/Desktop/Openclassrooms/Projet-3/images/restaurants/cite-rouge.jpg" alt="cite-rouge">
+                        <p class="cite-rouge-title">À la française</p>
+                        <p class="cite-rouge-place">Cité rouge</p>
+                        <img src="/Users/gaelletakforyan/Desktop/Openclassrooms/Projet-3/images/font/heart.svg" alt="heart">
+                    </div>
+                </a>
+
+                <a class="restaurant4-link" href="restaurant4-link">
+                    <div class="folie-mericourt">
+                        <img class="folie-mericourt-img" src="/Users/gaelletakforyan/Desktop/Openclassrooms/Projet-3/images/restaurants/folie-mericourt.jpg" alt="folie-mericourt">
+                        <p class="folie-mericourt-title">Le délice des sens</p>
+                        <p class="folie-mericourt-place">Folie Méricourt</p>
+                        <img src="/Users/gaelletakforyan/Desktop/Openclassrooms/Projet-3/images/font/heart.svg" alt="heart">
+                    </div>
+                </a>
+            </section>
+
+            <footer>
+                <p>ohmyfood</p>
+                <img src="/Users/gaelletakforyan/Desktop/Openclassrooms/Projet-3/images/font/ustensils.svg" alt="ustensils">
+                <p>Proposer un restaurant</p>
+                <img src="/Users/gaelletakforyan/Desktop/Openclassrooms/Projet-3/images/font/partner.svg" alt="partner">
+                <p>Devenir partenaire</p>
+                <p>Mentions légales</p>
+                <p><a href="mailto:contact@ohmyfood.com">Contact</a></p>
+            </footer>
         </div>
     </body>
