Beginning of css on header

--- a/Html/Accueil.html
+++ b/Html/Accueil.html
@@ -3,7 +3,7 @@
     <!-- Website name -->
     <head> 
         <meta charset="utf-8"/>
-        <link rel="stylesheet" href="Accueil.css"/>
+        <link rel="stylesheet" href="/Users/gaelletakforyan/Desktop/Openclassrooms/Projet-3/CSS/Accueil.css"/>
     
         <!-- Police -->
         <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -27,10 +27,10 @@
                 </div>
 
                 <!-- City search -->
-                <button> 
-                    <img class="map" src="/Users/gaelletakforyan/Desktop/Openclassrooms/Projet-3/images/font/map.svg" alt="map"> Paris, Belleville
-                </button>
-
+                <div class="map">
+                    <input class="input" type="search" placeholder="Paris, Belleville">
+                    <img class="icon" src="/Users/gaelletakforyan/Desktop/Openclassrooms/Projet-3/images/font/map.svg" alt="icon">
+                </div>
                 <!-- Purpose -->
                 <div class="purpose">
                     <h2> Réservez le menu qui vous convient </h2>
@@ -104,6 +104,8 @@
             </section>
 
             <footer>
+                <!-- Footer -->
+
                 <p>ohmyfood</p>
                 <img src="/Users/gaelletakforyan/Desktop/Openclassrooms/Projet-3/images/font/ustensils.svg" alt="ustensils">
                 <p>Proposer un restaurant</p>
