Update css above section

--- a/Html/Accueil.html
+++ b/Html/Accueil.html
@@ -7,8 +7,8 @@
     
         <!-- Police -->
         <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400&family=Shrikhand&display=swap" rel="stylesheet">   
-
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;500&family=Shrikhand&display=swap" rel="stylesheet">
+       
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <!-- Ohmyfood -->
@@ -33,28 +33,30 @@
                 </div>
                 <!-- Purpose -->
                 <div class="purpose">
-                    <h2> Réservez le menu qui vous convient </h2>
-                    <p> Découvrez des restaurants d'exception, séléctionnés par nos soins.</p>
+                    <h2> Réservez le menu qui <br> vous convient </h2>
+                    <p> Découvrez des restaurants d'exception, <br> séléctionnés par nos soins.</p>
+                    <input class="explore" type="button" value="Explorer nos restaurants">
                 </div>
-
-                <input type="button" value="Explorer nos restaurants">
 
                 <!-- Running -->
                 <nav>
                     <h2>Fonctionnement</h2>
 
-                    <img class="1" src="/Users/gaelletakforyan/Desktop/Openclassrooms/Projet-3/images/font/1.svg" alt="1">
-                    <button>
-                        <img class="select" src="/Users/gaelletakforyan/Desktop/Openclassrooms/Projet-3/images/font/mobile.svg" alt="select"> Choisissez un restaurant
-                    </button>
-                    <img class="2" src="/Users/gaelletakforyan/Desktop/Openclassrooms/Projet-3/images/font/2.svg" alt="2">
-                    <button>
-                        <img class="compose" src="/Users/gaelletakforyan/Desktop/Openclassrooms/Projet-3/images/font/list.svg" alt="compose"> Composez votre menu
-                    </button>
-                    <img class="3" src="/Users/gaelletakforyan/Desktop/Openclassrooms/Projet-3/images/font/3.svg" alt="3">
-                    <button>
-                        <img class="store" src="/Users/gaelletakforyan/Desktop/Openclassrooms/Projet-3/images/font/store.svg" alt="store"> Dégustez au restaurant
-                    </button>
+                    <div class="select"> 
+                        <img class="first" src="/Users/gaelletakforyan/Desktop/Openclassrooms/Projet-3/images/font/1.svg" alt="1">
+                        <img class="select-img" src="/Users/gaelletakforyan/Desktop/Openclassrooms/Projet-3/images/font/mobile.svg" alt="select">
+                        <input class="select-p" type="search" placeholder="Choisissez un restaurant">
+                    </div>
+                    <div class="compose">
+                        <img class="second" src="/Users/gaelletakforyan/Desktop/Openclassrooms/Projet-3/images/font/2.svg" alt="2">
+                        <img class="compose-img" src="/Users/gaelletakforyan/Desktop/Openclassrooms/Projet-3/images/font/list.svg" alt="compose"> 
+                        <input class="compose-p" type="search" placeholder="Composez votre menu">
+                    </div>
+                    <div class="store">
+                        <img class="third" src="/Users/gaelletakforyan/Desktop/Openclassrooms/Projet-3/images/font/3.svg" alt="3">
+                        <img class="store-img" src="/Users/gaelletakforyan/Desktop/Openclassrooms/Projet-3/images/font/store.svg" alt="store">
+                        <input class="store-p" type="search" placeholder="Dégustez au restaurant">
+                    </div>
                 </nav>
 
             </header>
