Update Css on Accueil. Except box shadow. No error or warning on w3c

--- a/Html/Accueil.html
+++ b/Html/Accueil.html
@@ -69,20 +69,20 @@
                 <a class="restaurant1-link" href="restaurant1-link">
                     <div class="menilmontant">
                         <img class="menilmontant-img" src="/Users/gaelletakforyan/Desktop/Openclassrooms/Projet-3/images/restaurants/menilmontant.jpg" alt="menilmontant">
-                        <img src="/Users/gaelletakforyan/Desktop/Openclassrooms/Projet-3/images/font/nouveau.svg" alt="new">
+                        <img class="menilmontant-new" src="/Users/gaelletakforyan/Desktop/Openclassrooms/Projet-3/images/font/nouveau.svg" alt="new">
                         <p class="menilmontant-title">La palette du goût </p>
                         <p class="menilmontant-place">Ménilmontant</p>
-                        <img src="/Users/gaelletakforyan/Desktop/Openclassrooms/Projet-3/images/font/heart.svg" alt="heart">
+                        <img class ="menilmontant-heart" src="/Users/gaelletakforyan/Desktop/Openclassrooms/Projet-3/images/font/heart.svg" alt="heart">
                     </div>
                 </a>
 
                 <a class="restaurant2-link" href="restaurant2-link">
                     <div class="charonne">
                         <img class="charonne-img" src="/Users/gaelletakforyan/Desktop/Openclassrooms/Projet-3/images/restaurants/charonne.jpg" alt="charonne">
-                        <img src="/Users/gaelletakforyan/Desktop/Openclassrooms/Projet-3/images/font/nouveau.svg" alt="new">
+                        <img class="charonne-new" src="/Users/gaelletakforyan/Desktop/Openclassrooms/Projet-3/images/font/nouveau.svg" alt="new">
                         <p class="charonne-title">La note enchantée</p>
                         <p class="charonne-place">Charonne</p>
-                        <img src="/Users/gaelletakforyan/Desktop/Openclassrooms/Projet-3/images/font/heart.svg" alt="heart">
+                        <img class="charonne-heart" src="/Users/gaelletakforyan/Desktop/Openclassrooms/Projet-3/images/font/heart.svg" alt="heart">
                     </div>
                 </a>
 
@@ -91,7 +91,7 @@
                         <img class="cite-rouge-img" src="/Users/gaelletakforyan/Desktop/Openclassrooms/Projet-3/images/restaurants/cite-rouge.jpg" alt="cite-rouge">
                         <p class="cite-rouge-title">À la française</p>
                         <p class="cite-rouge-place">Cité rouge</p>
-                        <img src="/Users/gaelletakforyan/Desktop/Openclassrooms/Projet-3/images/font/heart.svg" alt="heart">
+                        <img class="cite-rouge-heart" src="/Users/gaelletakforyan/Desktop/Openclassrooms/Projet-3/images/font/heart.svg" alt="heart">
                     </div>
                 </a>
 
@@ -100,7 +100,7 @@
                         <img class="folie-mericourt-img" src="/Users/gaelletakforyan/Desktop/Openclassrooms/Projet-3/images/restaurants/folie-mericourt.jpg" alt="folie-mericourt">
                         <p class="folie-mericourt-title">Le délice des sens</p>
                         <p class="folie-mericourt-place">Folie Méricourt</p>
-                        <img src="/Users/gaelletakforyan/Desktop/Openclassrooms/Projet-3/images/font/heart.svg" alt="heart">
+                        <img class="folie-mericourt-heart" src="/Users/gaelletakforyan/Desktop/Openclassrooms/Projet-3/images/font/heart.svg" alt="heart">
                     </div>
                 </a>
             </section>
@@ -108,13 +108,13 @@
             <footer>
                 <!-- Footer -->
 
-                <p>ohmyfood</p>
-                <img src="/Users/gaelletakforyan/Desktop/Openclassrooms/Projet-3/images/font/ustensils.svg" alt="ustensils">
-                <p>Proposer un restaurant</p>
-                <img src="/Users/gaelletakforyan/Desktop/Openclassrooms/Projet-3/images/font/partner.svg" alt="partner">
-                <p>Devenir partenaire</p>
-                <p>Mentions légales</p>
-                <p><a href="mailto:contact@ohmyfood.com">Contact</a></p>
+                <p class= "title">ohmyfood</p>
+                <img class="ustensils" src="/Users/gaelletakforyan/Desktop/Openclassrooms/Projet-3/images/font/ustensils.svg" alt="ustensils">
+                <img class="partner" src="/Users/gaelletakforyan/Desktop/Openclassrooms/Projet-3/images/font/partner.svg" alt="partner">
+                <p class="ustensils-p">Proposer un restaurant</p>
+                <p class="partner-p">Devenir partenaire</p>
+                <p class="legal">Mentions légales</p>
+                <a class="contact-link" href="mailto:contact@ohmyfood.com">Contact</a>
             </footer>
         </div>
     </body>
