--- a/Html/Accueil.html
+++ b/Html/Accueil.html
@@ -73,6 +73,7 @@
                         <p class="menilmontant-title">La palette du goût </p>
                         <p class="menilmontant-place">Ménilmontant</p>
                         <img class ="menilmontant-heart" src="/Users/gaelletakforyan/Desktop/Openclassrooms/Projet-3/images/font/heart.svg" alt="heart">
+                        <img class ="menilmontant-heart2" src="/Users/gaelletakforyan/Desktop/Openclassrooms/Projet-3/images/font/heart-paint.svg" alt="heart">
                     </div>
                 </a>
 
@@ -82,7 +83,8 @@
                         <img class="charonne-new" src="/Users/gaelletakforyan/Desktop/Openclassrooms/Projet-3/images/font/nouveau.svg" alt="new">
                         <p class="charonne-title">La note enchantée</p>
                         <p class="charonne-place">Charonne</p>
-                        <img class="charonne-heart" src="/Users/gaelletakforyan/Desktop/Openclassrooms/Projet-3/images/font/heart.svg" alt="heart">
+                        <img class="charonne-heart" src="/Users/gaelletakforyan/Desktop/Openclassrooms/Projet-3/images/font/heart.svg" alt="heart">                    
+                        <img class="charonne-heart2" src="/Users/gaelletakforyan/Desktop/Openclassrooms/Projet-3/images/font/heart-paint.svg" alt="heart">                    
                     </div>
                 </a>
 
@@ -91,7 +93,8 @@
                         <img class="cite-rouge-img" src="/Users/gaelletakforyan/Desktop/Openclassrooms/Projet-3/images/restaurants/cite-rouge.jpg" alt="cite-rouge">
                         <p class="cite-rouge-title">À la française</p>
                         <p class="cite-rouge-place">Cité rouge</p>
-                        <img class="cite-rouge-heart" src="/Users/gaelletakforyan/Desktop/Openclassrooms/Projet-3/images/font/heart.svg" alt="heart">
+                        <img class="cite-rouge-heart" src="/Users/gaelletakforyan/Desktop/Openclassrooms/Projet-3/images/font/heart.svg" alt="heart">    
+                        <img class="cite-rouge-heart2" src="/Users/gaelletakforyan/Desktop/Openclassrooms/Projet-3/images/font/heart-paint.svg" alt="heart">    
                     </div>
                 </a>
 
@@ -101,6 +104,7 @@
                         <p class="folie-mericourt-title">Le délice des sens</p>
                         <p class="folie-mericourt-place">Folie Méricourt</p>
                         <img class="folie-mericourt-heart" src="/Users/gaelletakforyan/Desktop/Openclassrooms/Projet-3/images/font/heart.svg" alt="heart">
+                        <img class="folie-mericourt-heart2" src="/Users/gaelletakforyan/Desktop/Openclassrooms/Projet-3/images/font/heart-paint.svg" alt="heart">
                     </div>
                 </a>
             </section>
