--- a/Accueil.html
+++ b/Accueil.html
@@ -3,7 +3,7 @@
     <!-- Website name -->
     <head> 
         <meta charset="utf-8"/>
-        <link rel="stylesheet" href="/Users/gaelletakforyan/Desktop/Openclassrooms/Projet-3/Accueil.css"/>
+        <link rel="stylesheet" href="Accueil.css"/>
     
         <!-- Police -->
         <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -23,13 +23,13 @@
 
                 <!-- Logo/Title -->
                 <div class="logo">
-                    <img src="/Users/gaelletakforyan/Desktop/Openclassrooms/Projet-3/images/logo/ohmyfood@2x.svg" alt="logo Ohmyfood">
+                    <img src="images/logo/ohmyfood@2x.svg" alt="logo Ohmyfood">
                 </div>
 
                 <!-- City search -->
                 <div class="map">
                     <input class="input" type="search" placeholder="Paris, Belleville">
-                    <img class="icon" src="/Users/gaelletakforyan/Desktop/Openclassrooms/Projet-3/images/font/map.svg" alt="icon">
+                    <img class="icon" src="images/font/map.svg" alt="icon">
                 </div>
                 <!-- Purpose -->
                 <div class="purpose">
@@ -43,21 +43,21 @@
                     <h2>Fonctionnement</h2>
 
                     <div class="select"> 
-                        <img class="first" src="/Users/gaelletakforyan/Desktop/Openclassrooms/Projet-3/images/font/1.svg" alt="1">
-                        <img class="select-img" src="/Users/gaelletakforyan/Desktop/Openclassrooms/Projet-3/images/font/mobile.svg" alt="select">
-                        <img class="select-img2" src="/Users/gaelletakforyan/Desktop/Openclassrooms/Projet-3/images/font/mobile-paint.svg" alt="select">
+                        <img class="first" src="images/font/1.svg" alt="1">
+                        <img class="select-img" src="images/font/mobile.svg" alt="select">
+                        <img class="select-img2" src="images/font/mobile-paint.svg" alt="select">
                         <input class="select-p" type="search" placeholder="Choisissez un restaurant">
                     </div>
                     <div class="compose">
-                        <img class="second" src="/Users/gaelletakforyan/Desktop/Openclassrooms/Projet-3/images/font/2.svg" alt="2">
-                        <img class="compose-img" src="/Users/gaelletakforyan/Desktop/Openclassrooms/Projet-3/images/font/list.svg" alt="compose"> 
-                        <img class="compose-img2" src="/Users/gaelletakforyan/Desktop/Openclassrooms/Projet-3/images/font/list-paint.svg" alt="compose"> 
+                        <img class="second" src="images/font/2.svg" alt="2">
+                        <img class="compose-img" src="images/font/list.svg" alt="compose"> 
+                        <img class="compose-img2" src="images/font/list-paint.svg" alt="compose"> 
                         <input class="compose-p" type="search" placeholder="Composez votre menu">
                     </div>
                     <div class="store">
-                        <img class="third" src="/Users/gaelletakforyan/Desktop/Openclassrooms/Projet-3/images/font/3.svg" alt="3">
-                        <img class="store-img" src="/Users/gaelletakforyan/Desktop/Openclassrooms/Projet-3/images/font/store.svg" alt="store">
-                        <img class="store-img2" src="/Users/gaelletakforyan/Desktop/Openclassrooms/Projet-3/images/font/store-paint.svg" alt="store">
+                        <img class="third" src="images/font/3.svg" alt="3">
+                        <img class="store-img" src="images/font/store.svg" alt="store">
+                        <img class="store-img2" src="images/font/store-paint.svg" alt="store">
                         <input class="store-p" type="search" placeholder="Dégustez au restaurant">
                     </div>
                 </nav>
@@ -71,43 +71,43 @@
 
                 <a class="restaurant1-link" href="restaurant1-link">
                     <div class="menilmontant">
-                        <img class="menilmontant-img" src="/Users/gaelletakforyan/Desktop/Openclassrooms/Projet-3/images/restaurants/menilmontant.jpg" alt="menilmontant">
-                        <img class="menilmontant-new" src="/Users/gaelletakforyan/Desktop/Openclassrooms/Projet-3/images/font/nouveau.svg" alt="new">
+                        <img class="menilmontant-img" src="images/restaurants/menilmontant.jpg" alt="menilmontant">
+                        <img class="menilmontant-new" src="images/font/nouveau.svg" alt="new">
                         <p class="menilmontant-title">La palette du goût </p>
                         <p class="menilmontant-place">Ménilmontant</p>
-                        <img class ="menilmontant-heart" src="/Users/gaelletakforyan/Desktop/Openclassrooms/Projet-3/images/font/heart.svg" alt="heart">
-                        <img class ="menilmontant-heart2" src="/Users/gaelletakforyan/Desktop/Openclassrooms/Projet-3/images/font/heart-paint.svg" alt="heart">
+                        <img class ="menilmontant-heart" src="images/font/heart.svg" alt="heart">
+                        <img class ="menilmontant-heart2" src="images/font/heart-paint.svg" alt="heart">
                     </div>
                 </a>
 
                 <a class="restaurant2-link" href="restaurant2-link">
                     <div class="charonne">
-                        <img class="charonne-img" src="/Users/gaelletakforyan/Desktop/Openclassrooms/Projet-3/images/restaurants/charonne.jpg" alt="charonne">
-                        <img class="charonne-new" src="/Users/gaelletakforyan/Desktop/Openclassrooms/Projet-3/images/font/nouveau.svg" alt="new">
+                        <img class="charonne-img" src="images/restaurants/charonne.jpg" alt="charonne">
+                        <img class="charonne-new" src="images/font/nouveau.svg" alt="new">
                         <p class="charonne-title">La note enchantée</p>
                         <p class="charonne-place">Charonne</p>
-                        <img class="charonne-heart" src="/Users/gaelletakforyan/Desktop/Openclassrooms/Projet-3/images/font/heart.svg" alt="heart">                    
-                        <img class="charonne-heart2" src="/Users/gaelletakforyan/Desktop/Openclassrooms/Projet-3/images/font/heart-paint.svg" alt="heart">                    
+                        <img class="charonne-heart" src="images/font/heart.svg" alt="heart">                    
+                        <img class="charonne-heart2" src="images/font/heart-paint.svg" alt="heart">                    
                     </div>
                 </a>
 
                 <a class="restaurant3-link" href="restaurant3-link">
                     <div class="cite-rouge">
-                        <img class="cite-rouge-img" src="/Users/gaelletakforyan/Desktop/Openclassrooms/Projet-3/images/restaurants/cite-rouge.jpg" alt="cite-rouge">
+                        <img class="cite-rouge-img" src="images/restaurants/cite-rouge.jpg" alt="cite-rouge">
                         <p class="cite-rouge-title">À la française</p>
                         <p class="cite-rouge-place">Cité rouge</p>
-                        <img class="cite-rouge-heart" src="/Users/gaelletakforyan/Desktop/Openclassrooms/Projet-3/images/font/heart.svg" alt="heart">    
-                        <img class="cite-rouge-heart2" src="/Users/gaelletakforyan/Desktop/Openclassrooms/Projet-3/images/font/heart-paint.svg" alt="heart">    
+                        <img class="cite-rouge-heart" src="images/font/heart.svg" alt="heart">    
+                        <img class="cite-rouge-heart2" src="images/font/heart-paint.svg" alt="heart">    
                     </div>
                 </a>
 
                 <a class="restaurant4-link" href="restaurant4-link">
                     <div class="folie-mericourt">
-                        <img class="folie-mericourt-img" src="/Users/gaelletakforyan/Desktop/Openclassrooms/Projet-3/images/restaurants/folie-mericourt.jpg" alt="folie-mericourt">
+                        <img class="folie-mericourt-img" src="images/restaurants/folie-mericourt.jpg" alt="folie-mericourt">
                         <p class="folie-mericourt-title">Le délice des sens</p>
                         <p class="folie-mericourt-place">Folie Méricourt</p>
-                        <img class="folie-mericourt-heart" src="/Users/gaelletakforyan/Desktop/Openclassrooms/Projet-3/images/font/heart.svg" alt="heart">
-                        <img class="folie-mericourt-heart2" src="/Users/gaelletakforyan/Desktop/Openclassrooms/Projet-3/images/font/heart-paint.svg" alt="heart">
+                        <img class="folie-mericourt-heart" src="images/font/heart.svg" alt="heart">
+                        <img class="folie-mericourt-heart2" src="images/font/heart-paint.svg" alt="heart">
                     </div>
                 </a>
             </section>
@@ -116,8 +116,8 @@
                 <!-- Footer -->
 
                 <p class= "title">ohmyfood</p>
-                <img class="ustensils" src="/Users/gaelletakforyan/Desktop/Openclassrooms/Projet-3/images/font/ustensils.svg" alt="ustensils">
-                <img class="partner" src="/Users/gaelletakforyan/Desktop/Openclassrooms/Projet-3/images/font/partner.svg" alt="partner">
+                <img class="ustensils" src="images/font/ustensils.svg" alt="ustensils">
+                <img class="partner" src="images/font/partner.svg" alt="partner">
                 <p class="ustensils-p">Proposer un restaurant</p>
                 <p class="partner-p">Devenir partenaire</p>
                 <p class="legal">Mentions légales</p>
