--- a/index.html
+++ b/index.html
@@ -14,13 +14,18 @@
         <!-- Ohmyfood -->
         <meta name="description" content="Discover the best restaurants around you in one click. Fast and easy!"> 
         <title>Ohmyfood</title>
+
     </head>
 
     <body>
+         <!--Loader-->
+         <div class="overlay">
+            <div class="spinner"></div>
+        </div>
+
         <div class="bloc-page">
 
             <header>
-
                 <!-- Logo/Title -->
                 <div class="logo">
                     <img src="images/logo/ohmyfood@2x.svg" alt="logo Ohmyfood">
@@ -46,20 +51,17 @@
                         <img class="first" src="images/font/1.svg" alt="1">
                         <img class="select-img" src="images/font/mobile.svg" alt="select">
                         <input class="select-p" type="search" placeholder="Choisissez un restaurant">
-                        <img class="select-img2" src="images/font/mobile-paint.svg" alt="select">
-                    </div>
+                        <img class="select-img2" src="images/font/mobile-paint.svg" alt="select">                    </div>
                     <div class="compose">
                         <img class="second" src="images/font/2.svg" alt="2">
                         <img class="compose-img" src="images/font/list.svg" alt="compose"> 
                         <input class="compose-p" type="search" placeholder="Composez votre menu">
-                        <img class="compose-img2" src="images/font/list-paint.svg" alt="compose"> 
-                    </div>
+                        <img class="compose-img2" src="images/font/list-paint.svg" alt="compose">                     </div>
                     <div class="store">
                         <img class="third" src="images/font/3.svg" alt="3">
                         <img class="store-img" src="images/font/store.svg" alt="store">
                         <input class="store-p" type="search" placeholder="Dégustez au restaurant">
-                        <img class="store-img2" src="images/font/store-paint.svg" alt="store">
-                    </div>
+                        <img class="store-img2" src="images/font/store-paint.svg" alt="store">                    </div>
                 </nav>
 
             </header>
@@ -69,7 +71,7 @@
                 <!-- Restaurant selection -->
                 <h2>Restaurants</h2>
 
-                <a class="restaurant1-link" href="restaurant1-link">
+                <a class="restaurant1-link" href="Menu1.html">
                     <div class="menilmontant">
                         <img class="menilmontant-img" src="images/restaurants/menilmontant.jpg" alt="menilmontant">
                         <img class="menilmontant-new" src="images/font/nouveau.svg" alt="new">
