Creation under new file

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <!-- Website name -->
     <head> 
         <meta charset="utf-8"/>
-        <link rel="stylesheet" href="Accueil.css"/>
+        <link rel="stylesheet" href="index.css"/>
     
         <!-- Police -->
         <link rel="preconnect" href="https://fonts.gstatic.com">
