Organisation dossier menu1

--- a/menu1/menu1.html
+++ b/menu1/menu1.html
@@ -24,19 +24,19 @@
 
                 <!-- Logo/Title -->
                 <div class="logo">
-                    <a class="back" href="index.html">
-                        <img src="images/font/arrow.svg" alt="arrow">    
+                    <a class="back" href="../index.html">
+                        <img src="../images/font/arrow.svg" alt="arrow">    
                     </a>
-                    <img class="logo-img" src="images/logo/ohmyfood@2x.svg" alt="logo Ohmyfood">
+                    <img class="logo-img" src="../images/logo/ohmyfood@2x.svg" alt="logo Ohmyfood">
                 </div>
 
-                    <img class="menilmontant-img" src="images/restaurants/menilmontant.jpg" alt="menilmontant">
+                    <img class="menilmontant-img" src="../images/restaurants/menilmontant.jpg" alt="menilmontant">
             </header>
 
             <section>
                 <div class="main-title">
                     <p class="title">La palette du goût</p>
-                    <img class ="heart" src="images/font/heart.svg" alt="heart">
+                    <img class ="heart" src="../images/font/heart.svg" alt="heart">
                 </div>
 
                 <div class="starter">
@@ -148,8 +148,8 @@
                 <!-- Footer -->
 
                 <p class= "title">ohmyfood</p>
-                <img class="ustensils" src="images/font/ustensils.svg" alt="ustensils">
-                <img class="partner" src="images/font/partner.svg" alt="partner">
+                <img class="ustensils" src="../images/font/ustensils.svg" alt="ustensils">
+                <img class="partner" src="../images/font/partner.svg" alt="partner">
                 <p class="ustensils-p">Proposer un restaurant</p>
                 <p class="partner-p">Devenir partenaire</p>
                 <p class="legal">Mentions légales</p>
