Remise à jour de Sass sur main

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <!-- Website name -->
     <head> 
         <meta charset="utf-8"/>
-        <link rel="stylesheet" href="index.css"/>
+        <link rel="stylesheet" href="style.css"/>
     
         <!-- Police -->
         <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -74,7 +74,7 @@
                 <!-- Restaurant selection -->
                 <h2>Restaurants</h2>
 
-                <a class="restaurant1-link" href="menu1/index.html">
+                <a class="restaurant1-link" href="menu1/menu1.html">
                     <div class="menilmontant">
                         <img class="menilmontant-img" src="images/restaurants/menilmontant.jpg" alt="menilmontant">
                         <img class="menilmontant-new" src="images/font/nouveau.svg" alt="new">
