--- a/menu1/menu1.html
+++ b/menu1/menu1.html
@@ -3,7 +3,7 @@
     <!-- Website name -->
     <head> 
         <meta charset="utf-8"/>
-        <link rel="stylesheet" href="menu1.css"/>
+        <link rel="stylesheet" href="style1.css"/>
     
         <!-- Police -->
         <link rel="preconnect" href="https://fonts.gstatic.com">
