--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     </div>
                 </a>
 
-                <a class="restaurant2-link" href="restaurant2-link">
+                <a class="restaurant2-link" href="menu2/menu2.html">
                     <div class="charonne">
                         <img class="charonne-img" src="images/restaurants/charonne.jpg" alt="charonne">
                         <img class="charonne-new" src="images/font/nouveau.svg" alt="new">
