Changement sur photo cover

--- a/menu2/menu2.html
+++ b/menu2/menu2.html
@@ -30,7 +30,7 @@
                     <img class="logo-img" src="../images/logo/ohmyfood@2x.svg" alt="logo Ohmyfood">
                 </div>
 
-                    <img class="menilmontant-img" src="../images/restaurants/charonne.jpg" alt="charonne">
+                    <img class="charonne-img" src="../images/restaurants/charonne.jpg" alt="charonne">
             </header>
 
             <section>
