rajout html menu3

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                     </div>
                 </a>
 
-                <a class="restaurant3-link" href="restaurant3-link">
+                <a class="restaurant3-link" href="menu3/menu3.html">
                     <div class="cite-rouge">
                         <img class="cite-rouge-img" src="images/restaurants/cite-rouge.jpg" alt="cite-rouge">
                         <p class="cite-rouge-title">À la française</p>
