--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                     </div>
                 </a>
 
-                <a class="restaurant4-link" href="restaurant4-link">
+                <a class="restaurant4-link" href="menu4/menu4.html">
                     <div class="folie-mericourt">
                         <img class="folie-mericourt-img" src="images/restaurants/folie-mericourt.jpg" alt="folie-mericourt">
                         <p class="folie-mericourt-title">Le délice des sens</p>
